fix: change error widget width on mobile screens

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -29,4 +29,4 @@ $button-shadow: drop-shadow(2px 0px 4px $btn-color);
 //breakpoints
 $laptop: 1100px;
 $tablet: 590px;
-$mobile: 400px;
+$mobile: 450px;
