--- a/src/app/core/components/error/error.component.scss
+++ b/src/app/core/components/error/error.component.scss
@@ -14,6 +14,11 @@
   transform: translateY(150%);
   opacity: 0;
   animation: 0.5s goUp ease-in forwards;
+
+  @media screen and (max-width: $mobile) {
+    min-width: 200px;
+    width: 280px;
+  }
 }
 
 .error-text {
