--- a/src/app/core/components/header/profile-panel/profile-panel.component.scss
+++ b/src/app/core/components/header/profile-panel/profile-panel.component.scss
@@ -24,6 +24,11 @@
   margin: 0;
   margin-right: 8px;
   white-space: nowrap;
+
+  @media screen and (max-width: $mobile) {
+    width: 100px;
+    overflow: hidden;
+  }
 }
 
 .profile-icon {
